--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/HistoriOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/HistoriOrders.cshtml
@@ -69,7 +69,7 @@
                                                             <h4>aussen: @orderItem[ProudctItemCounter].Aussen</h4>
                                                             <h4>innen: @orderItem[ProudctItemCounter].Intern</h4>
                                                             <h4>Option - @orderItem[ProudctItemCounter].Option</h4>
-                                                            <h4 style="color:red">Preis: @orderItem[ProudctItemCounter].Price,00 €</h4>
+                                                            <input value="Preis: @orderItem[ProudctItemCounter].Price,00 €" style="color:red" />
                                                         </div>
                                                     </div>
                                                 </div>
