--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -166,6 +166,11 @@
                             </div>
 
                                 <div>
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" value="@ViewBag.Dopple.Gramm" required class="form-control"  type="text" name="Gramm" />
+                                </div>
+
+                                <div>
                                     <h5>Typ</h5>
                                     <select asp-for="Type" class="form-select">
 
@@ -395,6 +400,12 @@
                                     <h5>Name</h5>
                                     <input asp-for="Name" required class="form-control" type="text" name="Name" />
                                 </div>
+
+                                <div>
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" required class="form-control" type="text" name="Gramm" />
+                                </div>
+
 
                                 <div>
                                     <h5>Typ</h5>
