--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Register.cshtml
@@ -42,7 +42,7 @@
             </div>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Hendy nummer</label>
+                <label class="col-sm-4 col-form-label">Telefonummer</label>
                 <div class="col-sm-8">
                     <input  asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
@@ -50,21 +50,21 @@
             </div>
 
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Password</label>
+                <label class="col-sm-4 col-form-label">Neues Passwort</label>
                 <div class="col-sm-8">
                 <input asp-for="Input.Password" class="form-control"  />               
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">ConfirmPassword</label>
+                <label class="col-sm-4 col-form-label">Neues Passwort bestätigen</label>
                 <div class="col-sm-8">
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Abonnieren Sie die Nachrichten</label>
+                <label class="col-sm-4 col-form-label">Newsletter Bestellen</label>
                 <div class="col-sm-8">
                     @Html.CheckBoxFor(model => model.Input.isSend, new { @class = "form-check-input" })
                     <span asp-validation-for="Input.isSend" class="text-danger"></span>
