--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -108,11 +108,17 @@
                     <br />
                 <label asp-for="ImageFile" class="control-label"></label>
                     <br />
-                <div>
+
+                    <div >
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
+                    <div>
+                        <label asp-for="Gramm" class="control-label"></label>
+                        <input asp-for="Gramm" class="form-control" />
+                        <span asp-validation-for="Gramm" class="text-danger"></span>
+                    </div>
 
                     <div>
                         <label asp-for="Type" class="control-label"></label>
