--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Profil_Knaufzylinder.cshtml
@@ -64,6 +64,13 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
+                <div class="form-group">
+                    <label asp-for="Gramm" class="control-label"></label>
+                    <input asp-for="Gramm" class="form-control" />
+                    <span asp-validation-for="Gramm" class="text-danger"></span>
+                </div>
+
+
                 <div>
                     <label asp-for="Type" class="control-label"></label>
                     <select asp-for="Type" class="form-select">
