--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -53,11 +53,20 @@
                     <span asp-validation-for="ImageName" class="text-danger"></span>
                 </div>
                 <label asp-for="ImageFile" class="control-label"></label>
+                
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
+
+                <div class="form-group">
+                    <label asp-for="Gramm" class="control-label"></label>
+                    <input asp-for="Gramm" class="form-control" />
+                    <span asp-validation-for="Gramm" class="text-danger"></span>
+                </div>
+
+
                 <div>
                     <label asp-for="Type" class="control-label"></label>
                     <select asp-for="Type" class="form-select">
