--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -169,6 +169,11 @@
                                 <input asp-for="Name" value="@ViewBag.AussenZyl.Name" required class="form-control" type="text" name="Name" />
                             </div>
 
+                                <div class="form-group">
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" required class="form-control" type="text" name="Gramm" />
+                                </div>
+
                                 <div>
                                     <h5>Typ</h5>
                                     <select asp-for="Type" class="form-select">
@@ -297,6 +302,12 @@
                                 <label>Name</label>
                                 <input asp-for="Name" required class="form-control" type="text" name="Name" />
                             </div>
+
+                                <div>
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" required class="form-control" type="text" name="Gramm" />
+                                </div>
+
 
                                 <div>
                                     <h5>Typ</h5>
