--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Profil_KnaufzylinderRout.cshtml
@@ -168,13 +168,19 @@
 
                                     <input type="hidden" name="OldImage" value=" @ViewBag.Knayf.ImageName" />
                                 </div>
-    
-                            <div>
+
+                                <div class="form-group">
                                     <h5>Name</h5>
                                 <input asp-for="Name" value="@ViewBag.Knayf.Name" required class="form-control" type="text" name="Name" />
                             </div>
 
-                                <div>
+                                <div class="form-group">
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" required class="form-control" type="text" name="Gramm" />
+                                </div>
+
+
+                                <div class="form-group">
                                     <h5>Typ</h5>
                                     <select asp-for="Type" class="form-select">
 
@@ -404,7 +410,13 @@
                                 <input asp-for="Name" required class="form-control" type="text" name="Name" />
                             </div>
 
-                            <div>
+                                <div>
+                                    <h5>Gewicht</h5>
+                                    <input asp-for="Gramm" required class="form-control" type="text" name="Gramm" />
+                                </div>
+
+
+                                <div>
                                 <h5>Typ</h5>
                                 <select asp-for="Type" class="form-select">
                                     <option></option>
