--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/KontaktIndividuelleAnfrage/Kontakt.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Shared/KontaktIndividuelleAnfrage/Kontakt.cshtml
@@ -98,7 +98,16 @@
         </div>
       
     </div>
-
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;margin-top:50px">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d606.7850500861123!2d13.4010891!3d52.5308975!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47a851e4e3c368d9%3A0xf51fde7b9f3dd954!2sSchl%C3%BCssel%20Discount%20-%20Schl%C3%BCsseldienst%20und%20Shop%20f%C3%BCr%20Sicherheitstechnik!5e0!3m2!1sde!2sde!4v1728981291567!5m2!1sde!2sde"
+                width="100%"
+                height="100%"
+                style="position: absolute; top: 0; left: 0; border: 0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
 </div>
 
 
